syntax = "proto3";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

import "common.proto";

// Message for prompt refinement request
message PromptRefinementRequest {
  string prompt = 1;
}

// Message for prompt refinement response
message PromptRefinementResponse {
  string originalPrompt = 1;
  string refinedPrompt = 2;
  string explanation = 3;
}

// UiService provides methods for managing UI interactions
service UiService {
  // Scrolls to a specific settings section in the settings view
  rpc scrollToSettings(StringRequest) returns (Empty);
  
  // Marks the current announcement as shown and returns whether an announcement should still be shown
  rpc onDidShowAnnouncement(EmptyRequest) returns (Boolean);
  
  // Subscribe to addToInput events (when user adds content via context menu)
  rpc subscribeToAddToInput(EmptyRequest) returns (stream String);
  
  // Refines a prompt to improve task understanding and execution
  rpc refinePrompt(PromptRefinementRequest) returns (PromptRefinementResponse);
}
