import { PromptRefinementRequest, PromptRefinementResponse } from "@shared/proto/ui"
import type { Controller } from "../index"

export async function refinePrompt(controller: Controller, request: PromptRefinementRequest): Promise<PromptRefinementResponse> {
	const { prompt } = request

	try {
		// TODO: Implement actual prompt refinement logic
		// For now, return a simple example refinement
		const refinedPrompt = await performPromptRefinement(prompt)

		return {
			originalPrompt: prompt,
			refinedPrompt: refinedPrompt.text,
			explanation: refinedPrompt.explanation,
		}
	} catch (error) {
		console.error("Error in prompt refinement:", error)
		// Return original prompt if refinement fails
		return {
			originalPrompt: prompt,
			refinedPrompt: prompt,
			explanation: "Prompt refinement is not yet implemented. Using original prompt.",
		}
	}
}

interface RefinementResult {
	text: string
	explanation: string
}

async function performPromptRefinement(prompt: string): Promise<RefinementResult> {
	// Placeholder implementation for prompt refinement
	// This is where you would implement the actual refinement logic
	// For example, using an AI model to improve the prompt

	const trimmedPrompt = prompt.trim()

	// Simple heuristics for prompt improvement
	if (trimmedPrompt.length < 10) {
		return {
			text: `Please provide more details about: ${trimmedPrompt}`,
			explanation: "Added request for more details to improve task clarity.",
		}
	}

	// Check if prompt lacks specific instructions
	if (!trimmedPrompt.includes("please") && !trimmedPrompt.includes("create") && !trimmedPrompt.includes("make")) {
		return {
			text: `Please ${trimmedPrompt}`,
			explanation: "Added polite request format to improve task understanding.",
		}
	}

	// For now, just return the original prompt with minor formatting
	return {
		text: trimmedPrompt,
		explanation: "Prompt is clear and well-structured.",
	}
}
